# tephra

./: Cargo.toml  README.md
assets/shaders/model/: model_outline.vert.glsl
assets/shaders/pbr/: offscreen.vert.glsl  pbr.frag.glsl  pbr.vert.glsl
core/: Cargo.toml  README.md  build.rs
core/assets/shaders/model/: model.vert.glsl
core/assets/shaders/outline/: outline.frag.glsl  outline.vert.glsl
core/assets/shaders/pbr/: pbr_outline.frag.glsl  pbr_outline.vert.glsl
core/assets/shaders/triangle/: triangle.vert.glsl  triangle.vert.spv
core/src/support/: app.rs  camera.rs  gltf.rs  lib.rs  model.rs
core/src/support/vulkan/: mod.rs  pipeline.rs  renderer.rs  shader_compilation.rs
core/src/support/vulkan/asset/: gltf.rs  obj.rs
core/src/support/vulkan/core/: debug_layer.rs  framebuffer.rs  image_view.rs  logical_device.rs  mod.rs  pipeline.rs  renderpass.rs  sampler.rs  swapchain.rs  (+1 more)
shader-compilation/: Cargo.toml
shader-compilation/src/: lib.rs
src/: main.rs
src/support/: app.rs  camera.rs  lib.rs
src/support/vulkan/: mod.rs  pipeline.rs  renderer.rs
src/support/vulkan/asset/: mod.rs  obj.rs
src/support/vulkan/core/: context.rs  debug_layer.rs  descriptor_pool.rs  descriptor_set_layout.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_layout.rs  queue_family_index_set.rs  renderpass.rs  sampler.rs  surface.rs  vulkan_swapchain.rs
src/support/vulkan/environment/: brdflut.rs  hdr.rs  irradiance.rs  prefilter.rs  skybox.rs
src/support/vulkan/resource/: mod.rs  pipeline_layout.rs  shader.rs  texture.rs
(+17 files in other folders)
