[package]
name = "tephra"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
winit = "0.21"
nalgebra-glm = "0.7.0"
vk-mem = "0.2.2"
snafu = "0.6.7"
ash = "0.31.0"
image = "0.23.4"
gltf = { version = "0.15.2", features = ["names"] }

[lib]
name = "support"
path = "src/support/lib.rs"
